--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
+  <!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <small>Copyright &copy; Movie/Concert Rating</small>
+  </footer> -->
 </html>
